--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -33,8 +33,8 @@ jobs:
     - name: Deploy to GitHub Releases
       uses: actions/upload-artifact@v3
       with:
-        name: hello-world-micro-service.jar
-        path: target/hello-world-micro-service.jar
+        name: spring-boot-docker-example-0.0.1-SNAPSHOT.jar
+        path: target/spring-boot-docker-example-0.0.1-SNAPSHOT.jar
       env:
         GITHUB_TOKEN: ${{ secrets.TOKEN }}
 
